***********************************
versions-2.2.0dev

SIGNIFICANT USER-VISIBLE CHANGES

  - Speed-up parallel processing and avoid waiting for all the samples at the different steps #158
  - Add --facetsOpts parameter #168
  - Update Facets outputs #168

BUG FIXES

  - Update mosdepth report in MultiQC #161

***********************************
versions-2.1.1

NEW FEATURES

  - Add TMB in Tumor Only mode

BUG FIXES

  - Bug in --skipFastqc option. Typo in modules.conf

SIGNIFICANT USER-VISIBLE CHANGES

  - Bam files after bqsr are exported by default. If --skipBQSR is used, the bams after filering will be exported

***********************************
version-2.1.0

NEW FEATURES

  - New --splitFastq and --fastqChunksSize options to split input reads
  - Support intervals parallel computing for WGS. See `--noIntervals`
  - add '--pon' option for tumor only samples in Mutect2
  - Update the calculate contamination process by including the segment files (#143)
  - Support bwa-mem2/DRAGMAP mapper (#100, #148)
  - Update annotation file for Mutect2 calling
  - Update versions of following tools:
    - preseq 2.0.3 -> 3.2.0
    - samtools 1.10 -> 1.15.1
    - bcftools 1.10.2 -> 1.15.1
    - picard 2.19.0 -> 2.27.4
    - multiqc 1.9 -> 1.13
    - mosdepth 0.2.9 -> 0.3.1
    - gatk 4.1.6.0 -> 4.1.8.0
    - r-base 3.6.3 -> 4.1.3

SIGNIFICANT USER-VISIBLE CHANGES

  - Add samtools stats module in the report
  - All variants are not returned after filterMutectCall including non PASS ones

***********************************
version-2.0.0

NEW FEATURES

  - WARNING - the --interval option is not supported in this version. The processing of WGS can thus be a bit long
  - move code to DSL2
  - rework of steps. Now 4 functional points of entry in vegan (mapping, filtering, calling and annotate)
  - update of SnpEff paremeters
  - new tools added: TMB, MSI
  - new output files for Facets (ploidy&cellularity file and amp_del file)