@@ -507,6 +507,7 @@ process {
       mode: 'copy',
       enabled: params.saveVcfIntermediates
     ]
+    ext.when = { !params.skipMutectOrientationModel }
   }
 
   withName: 'calculateContamination' {
@@ -771,6 +772,17 @@ process {
   /*
    * Utils
    */
+  withName:'checkDesign' {
+    ext.when = params.design
+    ext.args = params.singleEnd ? '--singleEnd' : ''
+  }
+
+  withName:'getSoftwareVersions' {
+    publishDir = [
+      path: { "${params.summaryDir}/softwareVersions" },
+      mode: 'copy'
+    ]
+  }
 
   withName:'outputDocumentation' {
     publishDir = [
